<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginFragment">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_700"
        android:layout_gravity="top|end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_username"
            android:id="@+id/tv_greetings"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:gravity="center"/>
        <ImageView
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_profile"
            android:src="@drawable/dummy_profile"
            android:layout_gravity="center"
            android:contentDescription="@string/dummy_image" />
        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_choose_image"
            android:text="@string/choose_profile"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_gravity="center"

            />

    </LinearLayout>

</LinearLayout>