<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".PasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/hello_username"
        android:id="@+id/tv_greetings"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInputLayout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            android:autofillHints="Enter Your Password"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/passwordInputText"
                android:inputType="textPassword"
                android:background="@color/white"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_500"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

</LinearLayout>